[package]
name = "pristine"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "run"
path = "src/bin/run.rs"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
git2 = "0.20.2"
octocrab = "0.44.1"
openai = "1.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.27.1", features = ["strum_macros"] }
strum_macros = "0.27.1"
tempfile = "3.20.0"
tokio = { version = "1.45.1", features = ["full"] }
walkdir = "2.5.0"
